+capture more auction data +made db interactions transactional